# aoc-py

./: .gitignore  README.md  pyproject.toml
aoc_2023/: day1.py  day2.py  day3.py  day4.py  day5.py
aoc_2023/solutions/: day1.py  day2.py  day3.py  day6.py
tests/: 2023.py  tests.py
