[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Ferdinand Keller <ferdinand.keller@proton.me>"]
readme = "README.md"

[tool.poetry.scripts]
"day1" = "tests.tests:day1"
"day2" = "tests.tests:day2"
"day3" = "tests.tests:day3"
"day4" = "tests.tests:day4"
"day5" = "tests.tests:day5"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
