[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Ferdinand Keller <ferdinand.keller@proton.me>"]
readme = "README.md"

[tool.poetry.scripts]
"day1" = "tests.tests:test_day1"
"day2" = "tests.tests:test_day2"
"day3" = "tests.tests:test_day3"
"day4" = "tests.tests:test_day4"
"day5" = "tests.tests:test_day5"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
